--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@babel/plugin-vue-setup-return",
   "version": "0.0.1",
-  "description": "auto inject return for vue composition api setup. ",
+  "description": "Automatic inject return for vue composition api setup. ",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
@@ -30,12 +30,8 @@
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@vue/babel-preset-app": "^4.4.6",
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
   }
 }
